# NeuronNet

./: CMakeLists.txt  Doxyfile  README_for_corrector.md
src/: main.cpp  network.cpp  network.h  random.cpp  random.h  test_main.cpp
